parser3/y.output
Terminals unused in grammar

   DIVIDE
   AND
   NOT
   DIV
   MOD
   CASE
   DOWNTO
   FILEFILE
   FUNCTION
   PACKED
   PROCEDURE
   SET
   WITH


State 41 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM IDENTIFIER LPAREN IDENTIFIER RPAREN SEMICOLON prebegin statement DOT

    2 prebegin: variables
    3         | constants prebegin
    4         | labels prebegin
    5         | types prebegin

    6 labels: LABEL label

    7 label: NUMBER COMMA label
    8      | NUMBER SEMICOLON

    9 types: TYPE typelist

   10 typelist: typeItem SEMICOLON typelist
   11         | typeItem SEMICOLON

   12 typeItem: IDENTIFIER EQ type

   13 type: RECORD recordSet END
   14     | LPAREN idlist RPAREN
   15     | POINT IDENTIFIER

   16 idlist: IDENTIFIER COMMA idlist
   17       | IDENTIFIER

   18 recordSet: recordLine
   19          | recordLine SEMICOLON recordSet

   20 recordLine: recordNames COLON recordType

   21 recordNames: IDENTIFIER COMMA recordNames
   22            | IDENTIFIER

   23 recordType: IDENTIFIER

   24 constants: CONST constant

   25 constant: constinst SEMICOLON constant
   26         | constinst SEMICOLON

   27 constinst: IDENTIFIER EQ NUMBER

   28 equalsNum: IDENTIFIER EQ NUMBER

   29 variables: VAR varSet

   30 varSet: varLine SEMICOLON
   31       | varLine SEMICOLON varSet

   32 varLine: varNames COLON varType
   33        | varNames COLON ARRAY LBRACKET btwbrackets RBRACKET OF IDENTIFIER

   34 btwbrackets: NUMBER DOTDOT NUMBER COMMA IDENTIFIER
   35            | NUMBER DOTDOT NUMBER

   36 varNames: IDENTIFIER COMMA varNames
   37         | IDENTIFIER

   38 varType: IDENTIFIER

   39 var: IDENTIFIER
   40    | var DOT IDENTIFIER
   41    | mergebracks
   42    | var POINT

   43 mergebracks: IDENTIFIER mergelist

   44 mergelist: LBRACKET argslist RBRACKET
   45          | LBRACKET argslist RBRACKET mergelist

   46 argslist: expr COMMA argslist
   47         | expr

   48 statement: BEGINBEGIN statement endpart
   49          | IF expr THEN statement endif
   50          | forLoop
   51          | funcCall
   52          | assignment
   53          | repeatuntil
   54          | NUMBER COLON statement
   55          | WHILE expr DO statement
   56          | GOTO NUMBER

   57 repeatuntil: REPEAT statement UNTIL equalsNum

   58 funcCall: IDENTIFIER LPAREN expr RPAREN

   59 forLoop: FOR assignment TO IDENTIFIER DO statement

   60 endpart: SEMICOLON statement endpart
   61        | END

   62 endif: ELSE statement
   63      | /* empty */

   64 assignment: factor ASSIGN expr

   65 expr: simpexpr EQ simpexpr
   66     | simpexpr LT simpexpr
   67     | simpexpr GT simpexpr
   68     | simpexpr NE simpexpr
   69     | simpexpr LE simpexpr
   70     | simpexpr GE simpexpr
   71     | simpexpr IN simpexpr
   72     | simpexpr

   73 simpexpr: simpexpr PLUS term
   74         | simpexpr MINUS term
   75         | simpexpr OR term
   76         | unaryexpr

   77 unaryexpr: PLUS term
   78          | MINUS term
   79          | term

   80 term: term TIMES factor
   81     | factor

   82 factor: LPAREN expr RPAREN
   83       | var
   84       | NUMBER
   85       | STRING
   86       | funcCall
   87       | NIL


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 1 12 15 16 17 21 22 23 27 28 33 34 36 37 38 39 40
    43 58 59
STRING (259) 85
NUMBER (260) 7 8 27 28 34 35 54 56 84
PLUS (261) 73 77
MINUS (262) 74 78
TIMES (263) 80
DIVIDE (264)
ASSIGN (265) 64
EQ (266) 12 27 28 65
NE (267) 68
LT (268) 66
LE (269) 69
GE (270) 70
GT (271) 67
POINT (272) 15 42
DOT (273) 1 40
AND (274)
OR (275) 75
NOT (276)
DIV (277)
MOD (278)
IN (279) 71
COMMA (280) 7 16 21 34 36 46
SEMICOLON (281) 1 8 10 11 19 25 26 30 31 60
COLON (282) 20 32 33 54
LPAREN (283) 1 14 58 82
RPAREN (284) 1 14 58 82
LBRACKET (285) 33 44 45
RBRACKET (286) 33 44 45
DOTDOT (287) 34 35
ARRAY (288) 33
BEGINBEGIN (289) 48
CASE (290)
CONST (291) 24
DO (292) 55 59
DOWNTO (293)
ELSE (294) 62
END (295) 13 61
FILEFILE (296)
FOR (297) 59
FUNCTION (298)
GOTO (299) 56
IF (300) 49
LABEL (301) 6
NIL (302) 87
OF (303) 33
PACKED (304)
PROCEDURE (305)
PROGRAM (306) 1
RECORD (307) 13
REPEAT (308) 57
SET (309)
THEN (310) 49
TO (311) 59
TYPE (312) 9
UNTIL (313) 57
VAR (314) 29
WHILE (315) 55
WITH (316)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 1, on right: 0
prebegin (64)
    on left: 2 3 4 5, on right: 1 3 4 5
labels (65)
    on left: 6, on right: 4
label (66)
    on left: 7 8, on right: 6 7
types (67)
    on left: 9, on right: 5
typelist (68)
    on left: 10 11, on right: 9 10
typeItem (69)
    on left: 12, on right: 10 11
type (70)
    on left: 13 14 15, on right: 12
idlist (71)
    on left: 16 17, on right: 14 16
recordSet (72)
    on left: 18 19, on right: 13 19
recordLine (73)
    on left: 20, on right: 18 19
recordNames (74)
    on left: 21 22, on right: 20 21
recordType (75)
    on left: 23, on right: 20
constants (76)
    on left: 24, on right: 3
constant (77)
    on left: 25 26, on right: 24 25
constinst (78)
    on left: 27, on right: 25 26
equalsNum (79)
    on left: 28, on right: 57
variables (80)
    on left: 29, on right: 2
varSet (81)
    on left: 30 31, on right: 29 31
varLine (82)
    on left: 32 33, on right: 30 31
btwbrackets (83)
    on left: 34 35, on right: 33
varNames (84)
    on left: 36 37, on right: 32 33 36
varType (85)
    on left: 38, on right: 32
var (86)
    on left: 39 40 41 42, on right: 40 42 83
mergebracks (87)
    on left: 43, on right: 41
mergelist (88)
    on left: 44 45, on right: 43 45
argslist (89)
    on left: 46 47, on right: 44 45 46
statement (90)
    on left: 48 49 50 51 52 53 54 55 56, on right: 1 48 49 54 55 57
    59 60 62
repeatuntil (91)
    on left: 57, on right: 53
funcCall (92)
    on left: 58, on right: 51 86
forLoop (93)
    on left: 59, on right: 50
endpart (94)
    on left: 60 61, on right: 48 60
endif (95)
    on left: 62 63, on right: 49
assignment (96)
    on left: 64, on right: 52 59
expr (97)
    on left: 65 66 67 68 69 70 71 72, on right: 46 47 49 55 58 64 82
simpexpr (98)
    on left: 73 74 75 76, on right: 65 66 67 68 69 70 71 72 73 74 75
unaryexpr (99)
    on left: 77 78 79, on right: 76
term (100)
    on left: 80 81, on right: 73 74 75 77 78 79 80
factor (101)
    on left: 82 83 84 85 86 87, on right: 64 80 81


state 0

    0 $accept: . program $end
    1 program: . PROGRAM IDENTIFIER LPAREN IDENTIFIER RPAREN SEMICOLON prebegin statement DOT

    PROGRAM  shift, and go to state 1

    program  go to state 2


state 1

    1 program: PROGRAM . IDENTIFIER LPAREN IDENTIFIER RPAREN SEMICOLON prebegin statement DOT

    IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: PROGRAM IDENTIFIER . LPAREN IDENTIFIER RPAREN SEMICOLON prebegin statement DOT

    LPAREN  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: PROGRAM IDENTIFIER LPAREN . IDENTIFIER RPAREN SEMICOLON prebegin statement DOT

    IDENTIFIER  shift, and go to state 6


state 6

    1 program: PROGRAM IDENTIFIER LPAREN IDENTIFIER . RPAREN SEMICOLON prebegin statement DOT

    RPAREN  shift, and go to state 7


state 7

    1 program: PROGRAM IDENTIFIER LPAREN IDENTIFIER RPAREN . SEMICOLON prebegin statement DOT

    SEMICOLON  shift, and go to state 8


state 8

    1 program: PROGRAM IDENTIFIER LPAREN IDENTIFIER RPAREN SEMICOLON . prebegin statement DOT
    2 prebegin: . variables
    3         | . constants prebegin
    4         | . labels prebegin
    5         | . types prebegin
    6 labels: . LABEL label
    9 types: . TYPE typelist
   24 constants: . CONST constant
   29 variables: . VAR varSet

    CONST  shift, and go to state 9
    LABEL  shift, and go to state 10
    TYPE   shift, and go to state 11
    VAR    shift, and go to state 12

    prebegin   go to state 13
    labels     go to state 14
    types      go to state 15
    constants  go to state 16
    variables  go to state 17


state 9

   24 constants: CONST . constant
   25 constant: . constinst SEMICOLON constant
   26         | . constinst SEMICOLON
   27 constinst: . IDENTIFIER EQ NUMBER

    IDENTIFIER  shift, and go to state 18

    constant   go to state 19
    constinst  go to state 20


state 10

    6 labels: LABEL . label
    7 label: . NUMBER COMMA label
    8      | . NUMBER SEMICOLON

    NUMBER  shift, and go to state 21

    label  go to state 22


state 11

    9 types: TYPE . typelist
   10 typelist: . typeItem SEMICOLON typelist
   11         | . typeItem SEMICOLON
   12 typeItem: . IDENTIFIER EQ type

    IDENTIFIER  shift, and go to state 23

    typelist  go to state 24
    typeItem  go to state 25


state 12

   29 variables: VAR . varSet
   30 varSet: . varLine SEMICOLON
   31       | . varLine SEMICOLON varSet
   32 varLine: . varNames COLON varType
   33        | . varNames COLON ARRAY LBRACKET btwbrackets RBRACKET OF IDENTIFIER
   36 varNames: . IDENTIFIER COMMA varNames
   37         | . IDENTIFIER

    IDENTIFIER  shift, and go to state 26

    varSet    go to state 27
    varLine   go to state 28
    varNames  go to state 29


state 13

    1 program: PROGRAM IDENTIFIER LPAREN IDENTIFIER RPAREN SEMICOLON prebegin . statement DOT
   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   48 statement: . BEGINBEGIN statement endpart
   49          | . IF expr THEN statement endif
   50          | . forLoop
   51          | . funcCall
   52          | . assignment
   53          | . repeatuntil
   54          | . NUMBER COLON statement
   55          | . WHILE expr DO statement
   56          | . GOTO NUMBER
   57 repeatuntil: . REPEAT statement UNTIL equalsNum
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   59 forLoop: . FOR assignment TO IDENTIFIER DO statement
   64 assignment: . factor ASSIGN expr
   82 factor: . LPAREN expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL

    IDENTIFIER  shift, and go to state 30
    STRING      shift, and go to state 31
    NUMBER      shift, and go to state 32
    LPAREN      shift, and go to state 33
    BEGINBEGIN  shift, and go to state 34
    FOR         shift, and go to state 35
    GOTO        shift, and go to state 36
    IF          shift, and go to state 37
    NIL         shift, and go to state 38
    REPEAT      shift, and go to state 39
    WHILE       shift, and go to state 40

    var          go to state 41
    mergebracks  go to state 42
    statement    go to state 43
    repeatuntil  go to state 44
    funcCall     go to state 45
    forLoop      go to state 46
    assignment   go to state 47
    factor       go to state 48


state 14

    2 prebegin: . variables
    3         | . constants prebegin
    4         | . labels prebegin
    4         | labels . prebegin
    5         | . types prebegin
    6 labels: . LABEL label
    9 types: . TYPE typelist
   24 constants: . CONST constant
   29 variables: . VAR varSet

    CONST  shift, and go to state 9
    LABEL  shift, and go to state 10
    TYPE   shift, and go to state 11
    VAR    shift, and go to state 12

    prebegin   go to state 49
    labels     go to state 14
    types      go to state 15
    constants  go to state 16
    variables  go to state 17


state 15

    2 prebegin: . variables
    3         | . constants prebegin
    4         | . labels prebegin
    5         | . types prebegin
    5         | types . prebegin
    6 labels: . LABEL label
    9 types: . TYPE typelist
   24 constants: . CONST constant
   29 variables: . VAR varSet

    CONST  shift, and go to state 9
    LABEL  shift, and go to state 10
    TYPE   shift, and go to state 11
    VAR    shift, and go to state 12

    prebegin   go to state 50
    labels     go to state 14
    types      go to state 15
    constants  go to state 16
    variables  go to state 17


state 16

    2 prebegin: . variables
    3         | . constants prebegin
    3         | constants . prebegin
    4         | . labels prebegin
    5         | . types prebegin
    6 labels: . LABEL label
    9 types: . TYPE typelist
   24 constants: . CONST constant
   29 variables: . VAR varSet

    CONST  shift, and go to state 9
    LABEL  shift, and go to state 10
    TYPE   shift, and go to state 11
    VAR    shift, and go to state 12

    prebegin   go to state 51
    labels     go to state 14
    types      go to state 15
    constants  go to state 16
    variables  go to state 17


state 17

    2 prebegin: variables .

    $default  reduce using rule 2 (prebegin)


state 18

   27 constinst: IDENTIFIER . EQ NUMBER

    EQ  shift, and go to state 52


state 19

   24 constants: CONST constant .

    $default  reduce using rule 24 (constants)


state 20

   25 constant: constinst . SEMICOLON constant
   26         | constinst . SEMICOLON

    SEMICOLON  shift, and go to state 53


state 21

    7 label: NUMBER . COMMA label
    8      | NUMBER . SEMICOLON

    COMMA      shift, and go to state 54
    SEMICOLON  shift, and go to state 55


state 22

    6 labels: LABEL label .

    $default  reduce using rule 6 (labels)


state 23

   12 typeItem: IDENTIFIER . EQ type

    EQ  shift, and go to state 56


state 24

    9 types: TYPE typelist .

    $default  reduce using rule 9 (types)


state 25

   10 typelist: typeItem . SEMICOLON typelist
   11         | typeItem . SEMICOLON

    SEMICOLON  shift, and go to state 57


state 26

   36 varNames: IDENTIFIER . COMMA varNames
   37         | IDENTIFIER .  [COLON]

    COMMA  shift, and go to state 58

    $default  reduce using rule 37 (varNames)


state 27

   29 variables: VAR varSet .

    $default  reduce using rule 29 (variables)


state 28

   30 varSet: varLine . SEMICOLON
   31       | varLine . SEMICOLON varSet

    SEMICOLON  shift, and go to state 59


state 29

   32 varLine: varNames . COLON varType
   33        | varNames . COLON ARRAY LBRACKET btwbrackets RBRACKET OF IDENTIFIER

    COLON  shift, and go to state 60


state 30

   39 var: IDENTIFIER .  [PLUS, MINUS, TIMES, ASSIGN, EQ, NE, LT, LE, GE, GT, POINT, DOT, OR, IN, COMMA, SEMICOLON, RPAREN, RBRACKET, DO, ELSE, END, THEN, TO, UNTIL]
   43 mergebracks: IDENTIFIER . mergelist
   44 mergelist: . LBRACKET argslist RBRACKET
   45          | . LBRACKET argslist RBRACKET mergelist
   58 funcCall: IDENTIFIER . LPAREN expr RPAREN

    LPAREN    shift, and go to state 61
    LBRACKET  shift, and go to state 62

    $default  reduce using rule 39 (var)

    mergelist  go to state 63


state 31

   85 factor: STRING .

    $default  reduce using rule 85 (factor)


state 32

   54 statement: NUMBER . COLON statement
   84 factor: NUMBER .  [ASSIGN]

    COLON  shift, and go to state 64

    $default  reduce using rule 84 (factor)


state 33

   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   65 expr: . simpexpr EQ simpexpr
   66     | . simpexpr LT simpexpr
   67     | . simpexpr GT simpexpr
   68     | . simpexpr NE simpexpr
   69     | . simpexpr LE simpexpr
   70     | . simpexpr GE simpexpr
   71     | . simpexpr IN simpexpr
   72     | . simpexpr
   73 simpexpr: . simpexpr PLUS term
   74         | . simpexpr MINUS term
   75         | . simpexpr OR term
   76         | . unaryexpr
   77 unaryexpr: . PLUS term
   78          | . MINUS term
   79          | . term
   80 term: . term TIMES factor
   81     | . factor
   82 factor: . LPAREN expr RPAREN
   82       | LPAREN . expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL

    IDENTIFIER  shift, and go to state 30
    STRING      shift, and go to state 31
    NUMBER      shift, and go to state 65
    PLUS        shift, and go to state 66
    MINUS       shift, and go to state 67
    LPAREN      shift, and go to state 33
    NIL         shift, and go to state 38

    var          go to state 41
    mergebracks  go to state 42
    funcCall     go to state 68
    expr         go to state 69
    simpexpr     go to state 70
    unaryexpr    go to state 71
    term         go to state 72
    factor       go to state 73


state 34

   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   48 statement: . BEGINBEGIN statement endpart
   48          | BEGINBEGIN . statement endpart
   49          | . IF expr THEN statement endif
   50          | . forLoop
   51          | . funcCall
   52          | . assignment
   53          | . repeatuntil
   54          | . NUMBER COLON statement
   55          | . WHILE expr DO statement
   56          | . GOTO NUMBER
   57 repeatuntil: . REPEAT statement UNTIL equalsNum
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   59 forLoop: . FOR assignment TO IDENTIFIER DO statement
   64 assignment: . factor ASSIGN expr
   82 factor: . LPAREN expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL

    IDENTIFIER  shift, and go to state 30
    STRING      shift, and go to state 31
    NUMBER      shift, and go to state 32
    LPAREN      shift, and go to state 33
    BEGINBEGIN  shift, and go to state 34
    FOR         shift, and go to state 35
    GOTO        shift, and go to state 36
    IF          shift, and go to state 37
    NIL         shift, and go to state 38
    REPEAT      shift, and go to state 39
    WHILE       shift, and go to state 40

    var          go to state 41
    mergebracks  go to state 42
    statement    go to state 74
    repeatuntil  go to state 44
    funcCall     go to state 45
    forLoop      go to state 46
    assignment   go to state 47
    factor       go to state 48


state 35

   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   59 forLoop: FOR . assignment TO IDENTIFIER DO statement
   64 assignment: . factor ASSIGN expr
   82 factor: . LPAREN expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL

    IDENTIFIER  shift, and go to state 30
    STRING      shift, and go to state 31
    NUMBER      shift, and go to state 65
    LPAREN      shift, and go to state 33
    NIL         shift, and go to state 38

    var          go to state 41
    mergebracks  go to state 42
    funcCall     go to state 68
    assignment   go to state 75
    factor       go to state 48


state 36

   56 statement: GOTO . NUMBER

    NUMBER  shift, and go to state 76


state 37

   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   49 statement: IF . expr THEN statement endif
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   65 expr: . simpexpr EQ simpexpr
   66     | . simpexpr LT simpexpr
   67     | . simpexpr GT simpexpr
   68     | . simpexpr NE simpexpr
   69     | . simpexpr LE simpexpr
   70     | . simpexpr GE simpexpr
   71     | . simpexpr IN simpexpr
   72     | . simpexpr
   73 simpexpr: . simpexpr PLUS term
   74         | . simpexpr MINUS term
   75         | . simpexpr OR term
   76         | . unaryexpr
   77 unaryexpr: . PLUS term
   78          | . MINUS term
   79          | . term
   80 term: . term TIMES factor
   81     | . factor
   82 factor: . LPAREN expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL

    IDENTIFIER  shift, and go to state 30
    STRING      shift, and go to state 31
    NUMBER      shift, and go to state 65
    PLUS        shift, and go to state 66
    MINUS       shift, and go to state 67
    LPAREN      shift, and go to state 33
    NIL         shift, and go to state 38

    var          go to state 41
    mergebracks  go to state 42
    funcCall     go to state 68
    expr         go to state 77
    simpexpr     go to state 70
    unaryexpr    go to state 71
    term         go to state 72
    factor       go to state 73


state 38

   87 factor: NIL .

    $default  reduce using rule 87 (factor)


state 39

   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   48 statement: . BEGINBEGIN statement endpart
   49          | . IF expr THEN statement endif
   50          | . forLoop
   51          | . funcCall
   52          | . assignment
   53          | . repeatuntil
   54          | . NUMBER COLON statement
   55          | . WHILE expr DO statement
   56          | . GOTO NUMBER
   57 repeatuntil: . REPEAT statement UNTIL equalsNum
   57            | REPEAT . statement UNTIL equalsNum
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   59 forLoop: . FOR assignment TO IDENTIFIER DO statement
   64 assignment: . factor ASSIGN expr
   82 factor: . LPAREN expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL

    IDENTIFIER  shift, and go to state 30
    STRING      shift, and go to state 31
    NUMBER      shift, and go to state 32
    LPAREN      shift, and go to state 33
    BEGINBEGIN  shift, and go to state 34
    FOR         shift, and go to state 35
    GOTO        shift, and go to state 36
    IF          shift, and go to state 37
    NIL         shift, and go to state 38
    REPEAT      shift, and go to state 39
    WHILE       shift, and go to state 40

    var          go to state 41
    mergebracks  go to state 42
    statement    go to state 78
    repeatuntil  go to state 44
    funcCall     go to state 45
    forLoop      go to state 46
    assignment   go to state 47
    factor       go to state 48


state 40

   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   55 statement: WHILE . expr DO statement
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   65 expr: . simpexpr EQ simpexpr
   66     | . simpexpr LT simpexpr
   67     | . simpexpr GT simpexpr
   68     | . simpexpr NE simpexpr
   69     | . simpexpr LE simpexpr
   70     | . simpexpr GE simpexpr
   71     | . simpexpr IN simpexpr
   72     | . simpexpr
   73 simpexpr: . simpexpr PLUS term
   74         | . simpexpr MINUS term
   75         | . simpexpr OR term
   76         | . unaryexpr
   77 unaryexpr: . PLUS term
   78          | . MINUS term
   79          | . term
   80 term: . term TIMES factor
   81     | . factor
   82 factor: . LPAREN expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL

    IDENTIFIER  shift, and go to state 30
    STRING      shift, and go to state 31
    NUMBER      shift, and go to state 65
    PLUS        shift, and go to state 66
    MINUS       shift, and go to state 67
    LPAREN      shift, and go to state 33
    NIL         shift, and go to state 38

    var          go to state 41
    mergebracks  go to state 42
    funcCall     go to state 68
    expr         go to state 79
    simpexpr     go to state 70
    unaryexpr    go to state 71
    term         go to state 72
    factor       go to state 73


state 41

   40 var: var . DOT IDENTIFIER
   42    | var . POINT
   83 factor: var .  [PLUS, MINUS, TIMES, ASSIGN, EQ, NE, LT, LE, GE, GT, DOT, OR, IN, COMMA, SEMICOLON, RPAREN, RBRACKET, DO, ELSE, END, THEN, TO, UNTIL]

    POINT  shift, and go to state 80
    DOT    shift, and go to state 81

    DOT       [reduce using rule 83 (factor)]
    $default  reduce using rule 83 (factor)


state 42

   41 var: mergebracks .

    $default  reduce using rule 41 (var)


state 43

    1 program: PROGRAM IDENTIFIER LPAREN IDENTIFIER RPAREN SEMICOLON prebegin statement . DOT

    DOT  shift, and go to state 82


state 44

   53 statement: repeatuntil .

    $default  reduce using rule 53 (statement)


state 45

   51 statement: funcCall .  [DOT, SEMICOLON, ELSE, END, UNTIL]
   86 factor: funcCall .  [ASSIGN]

    ASSIGN    reduce using rule 86 (factor)
    $default  reduce using rule 51 (statement)


state 46

   50 statement: forLoop .

    $default  reduce using rule 50 (statement)


state 47

   52 statement: assignment .

    $default  reduce using rule 52 (statement)


state 48

   64 assignment: factor . ASSIGN expr

    ASSIGN  shift, and go to state 83


state 49

    4 prebegin: labels prebegin .

    $default  reduce using rule 4 (prebegin)


state 50

    5 prebegin: types prebegin .

    $default  reduce using rule 5 (prebegin)


state 51

    3 prebegin: constants prebegin .

    $default  reduce using rule 3 (prebegin)


state 52

   27 constinst: IDENTIFIER EQ . NUMBER

    NUMBER  shift, and go to state 84


state 53

   25 constant: . constinst SEMICOLON constant
   25         | constinst SEMICOLON . constant
   26         | . constinst SEMICOLON
   26         | constinst SEMICOLON .  [CONST, LABEL, TYPE, VAR]
   27 constinst: . IDENTIFIER EQ NUMBER

    IDENTIFIER  shift, and go to state 18

    $default  reduce using rule 26 (constant)

    constant   go to state 85
    constinst  go to state 20


state 54

    7 label: . NUMBER COMMA label
    7      | NUMBER COMMA . label
    8      | . NUMBER SEMICOLON

    NUMBER  shift, and go to state 21

    label  go to state 86


state 55

    8 label: NUMBER SEMICOLON .

    $default  reduce using rule 8 (label)


state 56

   12 typeItem: IDENTIFIER EQ . type
   13 type: . RECORD recordSet END
   14     | . LPAREN idlist RPAREN
   15     | . POINT IDENTIFIER

    POINT   shift, and go to state 87
    LPAREN  shift, and go to state 88
    RECORD  shift, and go to state 89

    type  go to state 90


state 57

   10 typelist: . typeItem SEMICOLON typelist
   10         | typeItem SEMICOLON . typelist
   11         | . typeItem SEMICOLON
   11         | typeItem SEMICOLON .  [CONST, LABEL, TYPE, VAR]
   12 typeItem: . IDENTIFIER EQ type

    IDENTIFIER  shift, and go to state 23

    $default  reduce using rule 11 (typelist)

    typelist  go to state 91
    typeItem  go to state 25


state 58

   36 varNames: . IDENTIFIER COMMA varNames
   36         | IDENTIFIER COMMA . varNames
   37         | . IDENTIFIER

    IDENTIFIER  shift, and go to state 26

    varNames  go to state 92


state 59

   30 varSet: . varLine SEMICOLON
   30       | varLine SEMICOLON .  [IDENTIFIER, STRING, NUMBER, LPAREN, BEGINBEGIN, FOR, GOTO, IF, NIL, REPEAT, WHILE]
   31       | . varLine SEMICOLON varSet
   31       | varLine SEMICOLON . varSet
   32 varLine: . varNames COLON varType
   33        | . varNames COLON ARRAY LBRACKET btwbrackets RBRACKET OF IDENTIFIER
   36 varNames: . IDENTIFIER COMMA varNames
   37         | . IDENTIFIER

    IDENTIFIER  shift, and go to state 26

    IDENTIFIER  [reduce using rule 30 (varSet)]
    $default    reduce using rule 30 (varSet)

    varSet    go to state 93
    varLine   go to state 28
    varNames  go to state 29


state 60

   32 varLine: varNames COLON . varType
   33        | varNames COLON . ARRAY LBRACKET btwbrackets RBRACKET OF IDENTIFIER
   38 varType: . IDENTIFIER

    IDENTIFIER  shift, and go to state 94
    ARRAY       shift, and go to state 95

    varType  go to state 96


state 61

   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   58         | IDENTIFIER LPAREN . expr RPAREN
   65 expr: . simpexpr EQ simpexpr
   66     | . simpexpr LT simpexpr
   67     | . simpexpr GT simpexpr
   68     | . simpexpr NE simpexpr
   69     | . simpexpr LE simpexpr
   70     | . simpexpr GE simpexpr
   71     | . simpexpr IN simpexpr
   72     | . simpexpr
   73 simpexpr: . simpexpr PLUS term
   74         | . simpexpr MINUS term
   75         | . simpexpr OR term
   76         | . unaryexpr
   77 unaryexpr: . PLUS term
   78          | . MINUS term
   79          | . term
   80 term: . term TIMES factor
   81     | . factor
   82 factor: . LPAREN expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL

    IDENTIFIER  shift, and go to state 30
    STRING      shift, and go to state 31
    NUMBER      shift, and go to state 65
    PLUS        shift, and go to state 66
    MINUS       shift, and go to state 67
    LPAREN      shift, and go to state 33
    NIL         shift, and go to state 38

    var          go to state 41
    mergebracks  go to state 42
    funcCall     go to state 68
    expr         go to state 97
    simpexpr     go to state 70
    unaryexpr    go to state 71
    term         go to state 72
    factor       go to state 73


state 62

   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   44 mergelist: LBRACKET . argslist RBRACKET
   45          | LBRACKET . argslist RBRACKET mergelist
   46 argslist: . expr COMMA argslist
   47         | . expr
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   65 expr: . simpexpr EQ simpexpr
   66     | . simpexpr LT simpexpr
   67     | . simpexpr GT simpexpr
   68     | . simpexpr NE simpexpr
   69     | . simpexpr LE simpexpr
   70     | . simpexpr GE simpexpr
   71     | . simpexpr IN simpexpr
   72     | . simpexpr
   73 simpexpr: . simpexpr PLUS term
   74         | . simpexpr MINUS term
   75         | . simpexpr OR term
   76         | . unaryexpr
   77 unaryexpr: . PLUS term
   78          | . MINUS term
   79          | . term
   80 term: . term TIMES factor
   81     | . factor
   82 factor: . LPAREN expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL

    IDENTIFIER  shift, and go to state 30
    STRING      shift, and go to state 31
    NUMBER      shift, and go to state 65
    PLUS        shift, and go to state 66
    MINUS       shift, and go to state 67
    LPAREN      shift, and go to state 33
    NIL         shift, and go to state 38

    var          go to state 41
    mergebracks  go to state 42
    argslist     go to state 98
    funcCall     go to state 68
    expr         go to state 99
    simpexpr     go to state 70
    unaryexpr    go to state 71
    term         go to state 72
    factor       go to state 73


state 63

   43 mergebracks: IDENTIFIER mergelist .

    $default  reduce using rule 43 (mergebracks)


state 64

   39 var: . IDENTIFIER
   40    | . var DOT IDENTIFIER
   41    | . mergebracks
   42    | . var POINT
   43 mergebracks: . IDENTIFIER mergelist
   48 statement: . BEGINBEGIN statement endpart
   49          | . IF expr THEN statement endif
   50          | . forLoop
   51          | . funcCall
   52          | . assignment
   53          | . repeatuntil
   54          | . NUMBER COLON statement
   54          | NUMBER COLON . statement
   55          | . WHILE expr DO statement
   56          | . GOTO NUMBER
   57 repeatuntil: . REPEAT statement UNTIL equalsNum
   58 funcCall: . IDENTIFIER LPAREN expr RPAREN
   59 forLoop: . FOR assignment TO IDENTIFIER DO statement
   64 assignment: . factor ASSIGN expr
   82 factor: . LPAREN expr RPAREN
   83       | . var
   84       | . NUMBER
   85       | . STRING
   86       | . funcCall
   87       | . NIL
